<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_album"
        android:name="com.example.vinilos.ui.album.AlbumFragment"
        android:label="@string/title_album"
        tools:layout="@layout/fragment_album_item_list" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.vinilos.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.vinilos.ui.dashboard.DashboardFragment"
        android:label="@string/title_collector"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.vinilos.ui.band.BandFragment"
        android:label="@string/title_artists"
        tools:layout="@layout/fragment_album_item_list"
        android:layout_gravity="center"
        />
</navigation>