<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="collector" type="com.example.vinilos.models.Collector"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@{collector.name}" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/top_context"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/appBar">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/mobile_friendly_24px"
                        android:contentDescription="Mobile Icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/mobile"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/name_collector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:Text="@{collector.telephone}"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="24dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/mail_outline"
                        android:contentDescription="Email Icon" />

                    <TextView
                        android:layout_marginLeft="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"/>

                </LinearLayout>

                <TextView
                    android:justificationMode="inter_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{collector.email}"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="29dp"
                        android:layout_height="32dp"
                        android:src="@drawable/star_border"
                        android:contentDescription="Star" />

                    <TextView
                        android:justificationMode="inter_word"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/favoritos"
                        android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

                </LinearLayout>

            </LinearLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fp_fragment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </LinearLayout>



        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/_favorite_action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                app:backgroundTint="?attr/colorPrimary"
                app:tint="?attr/colorOnPrimary"
                android:layout_margin="16dp"
                android:contentDescription="@string/add_favorte_fab_content_desc"
                app:srcCompat="@drawable/baseline_add_24"/>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>